--- a/.github/workflows/lab4-workflow.yml
+++ b/.github/workflows/lab4-workflow.yml
@@ -7,6 +7,8 @@ on:
     
 jobs:
     npm-package:
+      permissions:                     
+        packages: write                
       runs-on: ubuntu-latest
       steps:
         - name: Checkout Repository
@@ -18,3 +20,6 @@ jobs:
             node-version: '20.x'
             registry-url: 'https://npm.pkg.github.com/' 
         - run: npm install
+        - run: npm publish            
+          env:
+            NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
