--- a/.github/workflows/lab4-workflow.yml
+++ b/.github/workflows/lab4-workflow.yml
@@ -1,9 +1,8 @@
 name: Publish Package to GitHub NPM Registry
 
 on: 
-  Publishon:
   release:
-    types: published
+    types: [published]
     
 jobs:
     npm-package:
@@ -22,4 +21,5 @@ jobs:
         - run: npm install
         - run: npm publish            
           env:
+
             NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
